# cpp-matchmaking-mvp

./: .gitignore  CMakeLists.txt  README.md
MM/: DemoRunner.cpp  DemoRunner.h  Main.cpp  packages.config  stdafx.cpp  stdafx.h
MM/common/: SStringFormat.h  SStringUtil.h  TSafeMap.h  TSingleton.h
MM/integration/: IntegrationZoneInstance.cpp  IntegrationZoneInstance.h  IntegrationZoneInstanceManager.cpp  IntegrationZoneInstanceManager.h
MM/matching/: MatchPenaltyManager.cpp  MatchPenaltyManager.h  MatchSessionManager.cpp  MatchSessionManager.h  MatchmakingConfig.h  MatchmakingTypes.h  PartyMatchmakingManager.cpp  PartyMatchmakingManager.h  SoloMatchmakingManager.cpp  SoloMatchmakingManager.h
MM/matching/core/: MatchSession.cpp  MatchSession.h  MatchmakingRule.cpp  MatchmakingRule.h  MatchmakingTicket.cpp  MatchmakingTicket.h
MM/matching/workers/: PartyMatchmakingWorker.cpp  PartyMatchmakingWorker.h  SoloMatchmakingWorker.cpp  SoloMatchmakingWorker.h
MM/tests/: MMUnitTest.cpp  MatchTestHelper.cpp  MatchTestHelper.h
MM/workers/: AsyncJobWorker.cpp  AsyncJobWorker.h  WorkerGroup.h  WorkerJobRequest.cpp  WorkerJobRequest.h
